Replaced std::stable_sort with ska_sort.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@
 
 -- This program is based on (at least) the work of
 
-  Michael Maniscalco, Atsushi Komiya, Pochang Chen and Surya Kandau.
+  Michael Maniscalco, Atsushi Komiya, Pochang Chen,
+  Surya Kandau and Malte Skarupke.
 
 
