Compression ratio improvements.

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@
 -- This program is based on (at least) the work of
 
   Michael Maniscalco, Atsushi Komiya, Pochang Chen,
-  Surya Kandau and Malte Skarupke.
+  Surya Kandau, Malte Skarupke, Danny Dube, Vincent Beaudoin,
+  Takahiro Ota, Hiroyoshi Morita and Akiko Manada.
 
 
