--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,15 @@
+* 2022-11-10 : Version 0.3.0
+  * Compression ratio improvements.
+
 * 2022-01-08 : Version 0.2.1
-  * Replaced std::stable_sort with ska_sort.
+  * Performance improvements.
 
 * 2022-01-05 : Version 0.2
-  * Improved compression.
-  * Reduced memory usage from 15x to 13x.
+  * Memory usage improvements.
+  * Compression ratio improvements.
 
 * 2021-12-07 : Version 0.1.1 - 0.1.2
-  * Slightly improved compression using symbols history.
+  * Minor compression ratio improvements.
 
 * 2021-12-03 : Version 0.1.0
   * Initial public release of the bsc-m03.
