--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+* 2022-11-27 : Version 0.5.0
+  * Compression ratio improvements.
+
 * 2022-11-20 : Version 0.4.0
   * Compression ratio improvements.
 
